# pro-scout-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  walkthrough.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
agents/: __init__.py  analyst_agent.py  gm_agent.py  scout_agent.py
docs/: CURSOR_BUILD_STEPS.md  PRD_MVP.md
frontend/: app.py
graph/: __init__.py  entity_extraction.py  logging_config.py  schemas.py  state.py  validate.py  workflow.py
tests/: __init__.py  test_analyst_agent.py  test_entity_extraction.py  test_gm_agent.py  test_scout_agent.py  test_workflow.py
